# python-pixel-agents

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.ai-observability.yml  docker-compose.yml  mkdocs.yml  package.json  pyproject.toml
.github/workflows/: docs.yml
app/: __init__.py  auth.py  config.py  main.py
app/adapters/: __init__.py  _subagent_filters.py  copilot_debug_adapter.py  copilot_otel_adapter.py  file_tailer.py
app/api/: __init__.py  deps.py  hooks.py  viewer.py
app/protocol/: __init__.py  domain_events.py  viewer_messages.py
app/services/: __init__.py  adapter_supervisor.py  event_bus.py  replay_store.py  session_aggregator.py
docs/: architecture.md  contributing.md  developer-guide.md  getting-started.md  index.md  observability.md  requirements.txt  viewer-ui.md
docs/reference/: app.md
observability/: otel-collector-config.yaml
scripts/: send-sample-event.ps1  verify-debug-only.ps1  verify-otel-only.ps1  verify-replay.ps1  verify-subagent-otel.ps1
server/__tests__/: hookEventHandler.test.ts
server/src/: constants.ts  hookEventHandler.ts  server.ts
shared/: messages.ts
src/: PixelAgentsViewProvider.ts  agentManager.ts  assetLoader.ts  constants.ts  extension.ts  fileWatcher.ts  timerManager.ts  transcriptParser.ts  viewerMessageRelay.ts
tests/: test_adapters.py  test_smoke.py  test_supervisor_and_replay.py
tests/_data/: copilot__s-replay.jsonl  copilot__s-roundtrip.jsonl  copilot__s-sse.jsonl  copilot__s-subagent-replay.jsonl
viewer-ui/: vite.config.ts
viewer-ui/src/: App.tsx  browserMock.ts  (+3 more)
(+7 files in other folders)
